KQED -/src/objects/Asset__c.object
<CustomObject>
    <description>Planned Giving Attribute</description>
    <fields>
        <fullName>Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Asset_Type__c</fullName>
        <label>Asset Type</label>
        <picklist>
            <picklistValues>
                <fullName>Artwork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacation Home</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Basis__c</fullName>
        <label>Cost Basis</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Market_Value_Date__c</fullName>
        <label>Market Value Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Market_Value__c</fullName>
        <label>Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planned_Giving__c</fullName>
        <inlineHelpText>Assets related to planned gifts</inlineHelpText>
        <label>Planned Giving</label>
        <referenceTo>Bequest__c</referenceTo>
        <relationshipName>Planned_Giving_Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Asset</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Asset ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>